--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -7,6 +7,6 @@ parameters:
     database_password: null
     mailer_transport: smtp
     mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
+    mailer_user: smartstart1941@gmail.com
+    mailer_password: azerty1941
     secret: ThisTokenIsNotSoSecretChangeIt
