--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,6 +6,8 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
+        ROLE_FREELANCER: ROLE_FREELANCER
+        ROLE_ENTREPRISE: ROLE_ENTREPRISE
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
@@ -18,6 +20,8 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
+                always_use_default_target_path: false
+                default_target_path: /Verify
                 # if you are using Symfony < 2.8, use the following config instead:
                 # csrf_provider: form.csrf_provider
 
