--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,6 +6,7 @@ imports:
     - { resource: "@BlogBundle/Resources/config/services.yml" }
     - { resource: "@AdminBundle/Resources/config/services.yml" }
     - { resource: "@ContractBundle/Resources/config/services.yml" }
+    - { resource: "@ApplicationBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
