--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+application:
+    resource: "@ApplicationBundle/Resources/config/routing.yml"
+    prefix:   /Application
+
 admin:
     resource: "@AdminBundle/Resources/config/routing.yml"
     prefix:   /Admin
