--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "knplabs/knp-menu-bundle": "^2.0",
         "knplabs/knp-snappy-bundle": "^1.5",
         "mgilet/notification-bundle": "^3.1",
+        "rollerworks/search": "^1.2",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
