--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "knplabs/knp-menu-bundle": "^2.0",
         "knplabs/knp-snappy-bundle": "^1.5",
         "mgilet/notification-bundle": "^3.1",
+        "ob/highcharts-bundle": "^1.6",
         "rollerworks/search": "^1.2",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
